deploy/kubernetes/overlays/ok-shared-breakglass/deployment-breakglass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok-console
  namespace: openkubes-console
spec:
  template:
    spec:
      hostAliases:
        - ip: 192.168.100.207
          hostnames:
            - keycloak.ok-shared.internal
      containers:
        - name: console
          volumeMounts:
            - name: oidc
              mountPath: /run/secrets/ok-console/oidc
              readOnly: true
            - name: oidc-ca
              mountPath: /run/secrets/ok-console/oidc-ca
              readOnly: true
      volumes:
        - name: oidc
          secret:
            secretName: ok-console-oidc
            defaultMode: 288
            items:
              - key: client-secret
                path: client-secret
              - key: subjects.json
                path: subjects.json
        - name: oidc-ca
          secret:
            secretName: ok-console-oidc-ca
            defaultMode: 288
            items:
              - key: ca.crt
                path: ca.crt
